fix(security): prevent XSS and information disclosure in auth error responses
- Replace raw exception message output with standardized ErrorResponse
- Inject ObjectMapper for proper JSON serialization
- Return generic "Authentication required" message instead of detailed errors
- Add UTF-8 encoding for proper character handling
- Improve annotation usage (@NotNull -> @NonNull for Spring consistency)

This prevents potential XSS attacks and information leakage through
authentication error messages.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>